exercicio sem o negocio do zero

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             <li>Insira dois números nos campos "Input 1" e "Input 2".</li>
             <li>Clique no botão "Dividir".</li>
             <li>Se o valor do "Input 2" for 0, uma mensagem de erro será exibida no parágrafo com o id "resultado".</li>
-            <li>Se o valor do "Input 2" não for 0, o resultado da divisão será exibido no parágrafo com o id "resultado".</li>
+            <li>Se o valor do "Input 2" não for 0, o resultado da divisão será exibido no parágrafo com o id
+              "resultado".</li>
           </ul>
         </li>
       </ol>
